update index.html and api calls
